I'm not sure if I'm going to change vfrom this Vuetify version... TODO: decide.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 Icon?
-**/.DS_store
+*/.DS_store
 
-node_modules/**
-bower_components/**
+node_modules/*
+bower_components/*
 
-ignore/**
+ignore/*
 
-**/.sass-cache
+*/.sass-cache
+
+*/tags
